--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
 <html lang="pt-br">
-    <head><title>Pagina Web</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="index.js"></script>
-    </head>
-    <body>
-        <h1>Ola mundo!</h1>
-        <p>A estrada fica por la...</p>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Pagina Web</title>
+</head>
+<body>
+    <h1>Ola mundo!</h1>
+    <p>A estrada fica por la...</p>
+    <script src="index.js"></script>
+</body>
 </html>
