--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Ola mundo!</h1>
+    <button id="calc">Veja as informaçoes</button>
+    <button id="boot">Veja seu IMC</button>
     <p>A estrada fica por la...</p>
     <script src="index.js"></script>
 </body>
