--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <h1>Ola mundo!</h1>
-    <button id="calc">Veja as informaçoes</button>
-    <button id="boot">Veja seu IMC</button>
-    <p>A estrada fica por la...</p>
+    <ul>
+        <li> <button id="calc">Veja as informaçoes</button></li>
+        <br>
+        <li><button id="boot">Veja seu IMC</button></li>
+        <br>
+        <li><button id="aposent">Veja sua aposentadoria</button></li>
+    </ul>
+    <br>
+    <p>A estrada fica por lá...</p>
     <script src="index.js"></script>
 </body>
 </html>
