--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <li><button id="boot">Veja seu IMC</button></li>
         <br>
         <li><button id="aposent">Veja sua aposentadoria</button></li>
+        <br>
+        <li><button id="cal">Use a calculadora!</button></li>
     </ul>
     <br>
     <p>A estrada fica por lá...</p>
